--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,12 +2,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <TextView
-        android:id="@+id/textView1"
+    <Button
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="TextView" />
+        android:text="Detailed activity"
+        android:onClick="goToDetailed" />
 
 </RelativeLayout>
