--- a/res/layout/activity_detailed.xml
+++ b/res/layout/activity_detailed.xml
@@ -22,7 +22,8 @@
         android:layout_alignRight="@+id/repsText"
         android:layout_alignTop="@+id/setsEdit"
         android:gravity="center"
-        android:text="Сэты:" />
+        android:text="Сэты:"
+        android:textSize="@dimen/abs__action_bar_title_text_size" />
 
     <EditText
         android:id="@+id/repsEdit"
@@ -55,7 +56,8 @@
         android:layout_alignTop="@id/repsEdit"
         android:layout_toLeftOf="@+id/repsEdit"
         android:gravity="center"
-        android:text="Повторения:" />
+        android:text="Повторения:"
+        android:textSize="@dimen/abs__action_bar_title_text_size" />
 
     <TextView
         android:id="@+id/weightsText"
@@ -66,6 +68,15 @@
         android:layout_alignRight="@+id/repsText"
         android:layout_alignTop="@id/weightsEdit"
         android:gravity="center"
-        android:text="Вес:" />
+        android:text="Вес:"
+        android:textSize="@dimen/abs__action_bar_title_text_size" />
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="Save" />
 
 </RelativeLayout>
